TP-6391: Fix issue with spacing on error pages that are not 404

--- a/app/assets/stylesheets/layout/page_specific/_error_page.scss
+++ b/app/assets/stylesheets/layout/page_specific/_error_page.scss
@@ -49,6 +49,7 @@
 
   @include respond-to($mq-m) {
     min-height: 0;
+    margin-bottom: $baseline-unit*10;
   }
 }
 
